@@ -1,5 +1,8 @@
 Wed Jul 13 03:57:54 1994  Jason Merrill  (jason@deneb.cygnus.com)
 
+        * method.c (hack_identifier): Put back old code so lists of
+        non-functions will be handled properly.
+
         * cp-tree.h (TYPE_NEEDS_CONSTRUCTING): #if 0 out; this macro is now
         defined in the language-independent tree.h.
 
